v.0.9.3.b4 Fix POI